--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "name": "tiny-koa-graphql",
+  "description": "A tiny koa-graphql server with tsup bundler",
   "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "start": "node build/index.js",
+    "start:dev": "tsup --onSuccess \"yarn start\"",
+    "dev": "tsup --watch --onSuccess \"yarn start\"",
+    "build": "tsup"
+  },
+  "main": "src/index.ts",
+  "types": "build/index.d.ts",
+  "files": [
+    "build/"
+  ],
   "dependencies": {
     "graphql": "15.5.0",
     "graphql-playground-middleware": "^1.1.2",
@@ -12,42 +25,14 @@
     "koa-router": "10.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.16",
-    "@babel/core": "7.13.16",
-    "@babel/node": "7.14.5",
-    "@babel/plugin-proposal-async-generator-functions": "7.13.15",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-proposal-export-default-from": "7.12.13",
-    "@babel/plugin-proposal-export-namespace-from": "7.14.5",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.13.8",
-    "@babel/plugin-proposal-object-rest-spread": "7.14.5",
-    "@babel/plugin-proposal-optional-chaining": "7.13.12",
-    "@babel/plugin-transform-async-to-generator": "7.13.0",
-    "@babel/preset-env": "7.13.15",
-    "@babel/preset-typescript": "7.13.0",
-    "@types/babel__core": "7.1.14",
-    "@types/babel__preset-env": "7.9.1",
     "@types/koa": "2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-convert": "^1.2.3",
     "@types/koa-cors": "^0.0.0",
     "@types/koa-graphql": "^0.8.4",
     "@types/koa-router": "7.4.2",
-    "@types/webpack-dev-server": "3.11.4",
-    "@types/webpack-node-externals": "2.5.1",
     "babel-loader": "8.2.2",
-    "clean-webpack-plugin": "3.0.0",
-    "reload-server-webpack-plugin": "1.0.1",
-    "webpack": "5.38.1",
-    "webpack-cli": "4.7.2",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "webpack-node-externals": "3.0.0",
+    "tsup": "^5.10.1",
     "typescript": "4.2.4"
-  },
-  "license": "MIT",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack --watch --progress --config webpack.js"
   }
 }
